crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__diff_SIM105_SIM105_5.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
--- Linter settings ---
-linter.unresolved_target_version = 3.11
+linter.unresolved_target_version = 3.12

--- Summary ---
Removed: 0
Added: 1

--- Added ---
SIM105 [*] Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
 --> SIM105_5.py:4:1
  |
3 |   # SIM105
4 | / try:
5 | |     pass
6 | | except* ValueError:
7 | |     pass
  | |________^
8 |
9 |   # SIM105
  |
help: Replace `try`-`except`-`pass` with `with contextlib.suppress(ValueError): ...`
  |
4 + import contextlib
5 ~ with contextlib.suppress(ValueError):
  |
note: This is an unsafe fix and may change runtime behavior
