crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__expr-and-not-expr_SIM220.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM220 [*] Use `False` instead of `a and not a`
 --> SIM220.py:1:4
  |
1 | if a and not a:
  |    ^^^^^^^^^^^
2 |     pass
  |
help: Replace with `False`
  |
  - if a and not a:
1 + if False:
2 |     pass
  |
note: This is an unsafe fix and may change runtime behavior

SIM220 [*] Use `False` instead of `a and not a`
 --> SIM220.py:4:5
  |
2 |     pass
3 |
4 | if (a and not a) and b:
  |     ^^^^^^^^^^^
5 |     pass
  |
help: Replace with `False`
  |
3 |
  - if (a and not a) and b:
4 + if (False) and b:
5 |     pass
  |
note: This is an unsafe fix and may change runtime behavior

SIM220 [*] Use `False` instead of `a and not a`
 --> SIM220.py:7:5
  |
5 |     pass
6 |
7 | if (a and not a) or b:
  |     ^^^^^^^^^^^
8 |     pass
  |
help: Replace with `False`
  |
6 |
  - if (a and not a) or b:
7 + if (False) or b:
8 |     pass
  |
note: This is an unsafe fix and may change runtime behavior
